exports[`test plurals:locales/de.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: brick en,
        brick_plural: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        value: value de,
        value_plural: values de
    },
    remove: {
    },
    replace: {
        book: book de,
        book_plural: books de
    }
}"
`;

exports[`test plurals:locales/en.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: brick en,
        brick_plural: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        value: value en,
        value_plural: values en
    },
    remove: {
    },
    replace: {
        book: book en,
        book_plural: books en
    }
}"
`;

exports[`test plurals:locales/es.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: brick en,
        brick_plural: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        value: value es,
        value_plural: values es
    },
    remove: {
    },
    replace: {
        book: book es,
        book_plural: books es
    }
}"
`;

exports[`test plurals:locales/fr.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: brick en,
        brick_plural: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        value: value fr,
        value_plural: values fr
    },
    remove: {
    },
    replace: {
        book: book fr,
        book_plural: books fr
    }
}"
`;

exports[`test plurals:locales/ja.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick_0: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        value_0: values ja
    },
    remove: {
    },
    replace: {
        book_0: books en
    }
}"
`;

exports[`test plurals:locales/ko.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick_0: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        value_0: values ko
    },
    remove: {
    },
    replace: {
        book_0: books en
    }
}"
`;

exports[`test plurals:locales/nl.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: brick en,
        brick_plural: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        value: value nl,
        value_plural: values nl
    },
    remove: {
    },
    replace: {
        book: book nl,
        book_plural: books nl
    }
}"
`;

exports[`test plurals:locales/pt-BR.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: brick en,
        brick_plural: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        value: value pt-BR,
        value_plural: values pt-BR
    },
    remove: {
    },
    replace: {
        book: book pt-BR,
        book_plural: books pt-BR
    }
}"
`;

exports[`test plurals:locales/ru.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick_0: bricks en,
        brick_1: bricks en,
        brick_2: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        value_0: values ru 0,
        value_1: values ru 1,
        value_2: values ru 2
    },
    remove: {
    },
    replace: {
        book_0: books en,
        book_1: books en,
        book_2: books en
    }
}"
`;

exports[`test plurals:locales/zh-CN.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick_0: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        value_0: values zh-CN
    },
    remove: {
    },
    replace: {
        book_0: books en
    }
}"
`;

exports[`test plurals:stderr.txt 1`] = `""`;

exports[`test plurals:stdout.txt 1`] = `
"Pushed keys to actual/locales/de.json: brick, brick_plural, not_plural_x, also_not_0_x
Removed keys from actual/locales/de.json: remove, remove_plural
Pushed keys to actual/locales/es.json: brick, brick_plural, not_plural_x, also_not_0_x
Removed keys from actual/locales/es.json: remove, remove_plural
Pushed keys to actual/locales/fr.json: brick, brick_plural, not_plural_x, also_not_0_x
Removed keys from actual/locales/fr.json: remove, remove_plural
Pushed keys to actual/locales/ja.json: book_0, brick, brick_0, not_plural_x, also_not_0_x, value
Removed keys from actual/locales/ja.json: book_plural, book, brick, remove, remove_plural, value
Pushed keys to actual/locales/ko.json: book_0, brick, brick_0, not_plural_x, also_not_0_x, value
Removed keys from actual/locales/ko.json: book_plural, book, brick, remove, remove_plural, value
Pushed keys to actual/locales/nl.json: brick, brick_plural, not_plural_x, also_not_0_x
Removed keys from actual/locales/nl.json: remove, remove_plural
Pushed keys to actual/locales/pt-BR.json: brick, brick_plural, not_plural_x, also_not_0_x
Removed keys from actual/locales/pt-BR.json: remove, remove_plural
Pushed keys to actual/locales/ru.json: book_0, book_1, book_2, brick, brick_0, brick_1, brick_2, not_plural_x, also_not_0_x, value
Removed keys from actual/locales/ru.json: book_plural, book, brick, remove, remove_plural, value
Pushed keys to actual/locales/zh-CN.json: book_0, brick, brick_0, not_plural_x, also_not_0_x, value
Removed keys from actual/locales/zh-CN.json: book_plural, book, brick, remove, remove_plural, value
"
`;
